# quantfly

./: .daemon_state.json  .gitignore  .news_breaking_state.json  .signals.db  .signals_seen.json  CHANGELOG_v13.1.md  CLAUDE.md  README.md  _cron_check.py  analyze_factor_ic.py  backtest_cross_section.py  backtest_factors.py  backtest_ranker.py  backtest_ranker_fast.py  backtest_rolling.py  backtest_selection.py  backtest_simple.py  backtest_timing_v2_trend.py  backtest_v4_risk_control.py  backtest_v5_satellite.py  backtest_v6_core_satellite.py  extended_factor_ic.py  growth_v12.py  growth_v12_1.py  growth_v13.py  growth_v14.py  pyproject.toml  qmt_live_rank.py  run_api.py  setup.py  test_ic_simple.py  test_qmt_minute.py  timing_model.py  train_ranker.py  v13_live.py  v13_miniqmt_strategy.py  v13_trader.py  verify_dual_gate.sh
.hermes/plans/: 2026-05-15_quantfly-fullstack.md
data/: fundamentals_2024.json  fundamentals_2025.json  fundamentals_latest.json  sector_sentiment.json
data/concept_screening/: concept_rankings.json  concept_stocks.json  final_concept_pool.json  screening_result.json
docs/: V12_STRATEGY.md  V13_交底文档.md  api-reference.md
output/: factor_analysis_report.md
quantfly/: __init__.py  cli.py
quantfly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
quantfly/api/: main.py
quantfly/backtest/: data_provider.py  engine.py  factor_portfolio.py
quantfly/hot_topics/: analyzer.py  (+11 more)
references/: etf_sector_map.txt
scripts/: concept_screener.py  news_signal_notify.py  refresh_fundamentals.py  sector_sentiment.py  stock_news_filter.py
(+31 files in other folders)
